module(
    name = "liquids_gse",
    version = "0.0.0",
)

bazel_dep(name = "nlohmann_json", version = "3.12.0")

bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "synnax", version = "0.49.0")
git_override(
    module_name = "synnax",
    remote = "https://github.com/synnaxlabs/synnax.git",
    commit = "e2a65f201990c34a1e696db52d1b829f33a5f80f"
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/HedronVision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
